@@ -19,7 +19,7 @@ GNU General Public License for more details.
 #ifndef OB_ALL_H
 #define OB_ALL_H
 
-#include "babelconfig.h"
+#include <openbabel/babelconfig.h>
 
 // Common STL headers
 #include <vector>
@@ -28,12 +28,12 @@ GNU General Public License for more details.
 #include <sstream>
 #include <iosfwd>
 
-#include "base.h"
-#include "generic.h"
-#include "mol.h"
-#include "oberror.h"
-#include "obconversion.h"
-#include "obmolecformat.h"
+#include <openbabel/base.h>
+#include <openbabel/generic.h>
+#include <openbabel/mol.h>
+#include <openbabel/oberror.h>
+#include <openbabel/obconversion.h>
+#include <openbabel/obmolecformat.h>
 
 #endif OB_ALL_H
 
