@@ -26,6 +26,10 @@
 	* include/openbabel/ring.h, generic.h, pluginiter.h, canon.h,
 	forcefield.h, lineend.h: Likewise.
 
+	* src/all.h, src/formats/all.h, src/Makefile.am, src/Makefile.in,
+	src/formats/Makefile.am, src/formats/Makefile.in: Update to allow
+	using precompiled headers again.
+
 2007-02-20  Tim Vandermeersch <tim.vandermeersch@gmail.com>
 
 	* src/forcefield.cpp: UpdateCoordinates now 'knows' about conformers
